--- a/configs/nfc/libnfc-hal-st.conf
+++ b/configs/nfc/libnfc-hal-st.conf
@@ -1,167 +1,116 @@
-########################### Start of libnfc-hal-st.conf ###########################
+###################### Start of libnfc-brcm.conf #######################
 
 ###############################################################################
-###############################################################################
-# ST HAL trace log level
-#define STNFC_TRACE_LEVEL_NONE    0x00
-#define STNFC_TRACE_LEVEL_ERROR   0x01
-#define STNFC_TRACE_LEVEL_WARNING 0x02
-#define STNFC_TRACE_LEVEL_DEBUG   0x03
-#define STNFC_TRACE_LEVEL_VERBOSE 0x04
-#define STNFC_TRACE_FLAG_PRIVACY  0x10
-STNFC_HAL_LOGLEVEL=0x13
+# Application options
+APPL_TRACE_LEVEL=0xFF
+PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
 
 NFC_DEBUG_ENABLED=0
-
-###############################################################################
-# Vendor specific mode to enable FW (RF & SWP) traces.
-STNFC_FW_DEBUG_ENABLED=0
-
 ###############################################################################
 # File used for NFA storage
-NFA_STORAGE="/data/nfc"
+NFA_STORAGE="/data/vendor/nfc"
 
 ###############################################################################
-# Keep the nfa storage file.
-PRESERVE_STORAGE=1
+# Configure the default Destination Gate used by HCI (the default is 4, which
+# is the ETSI loopback gate.
+NFA_HCI_DEFAULT_DEST_GATE=0xF0
 
 ###############################################################################
-# In Switch OFF mode (phone switched-off), specify the desired CE mode to
-# the controller.
-# 0: No card-emulation; DEFAULT
-# 1: Switch-off card-emulation enabled
-CE_ON_SWITCH_OFF_STATE=1
+# Force UICC to only listen to the following technology(s).
+# The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
+# Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_B | NFA_TECHNOLOGY_MASK_F
+UICC_LISTEN_TECH_MASK=0x07
 
 ###############################################################################
-# Vendor specific mode to support the USB charging mode if VPSIO=1 in switch off.
-STNFC_USB_CHARGING_MODE=1
+# Forcing HOST to listen for a selected protocol
+# 0x00 : Disable Host Listen
+# 0x01 : Enable Host to Listen (A)  for ISO-DEP tech A
+# 0x02 : Enable Host to Listen (B)  for ISO-DEP tech B
+# 0x04 : Enable Host to Listen (F)  for T3T Tag Type Protocol tech F
+# 0x07 : Enable Host to Listen (ABF)for ISO-DEP tech AB & T3T Tag Type Protocol tech F
+HOST_LISTEN_TECH_MASK=0x07
 
 ###############################################################################
-# Vendor Specific Proprietary Protocol & Discovery Configuration
-# Set to 0xFF if unsupported
-#  byte[0] NCI_PROTOCOL_18092_ACTIVE
-#  byte[1] NCI_PROTOCOL_B_PRIME
-#  byte[2] NCI_PROTOCOL_DUAL
-#  byte[3] NCI_PROTOCOL_15693
-#  byte[4] NCI_PROTOCOL_KOVIO
-#  byte[5] NCI_PROTOCOL_MIFARE
-#  byte[6] NCI_DISCOVERY_TYPE_POLL_KOVIO
-#  byte[7] NCI_DISCOVERY_TYPE_POLL_B_PRIME
-#  byte[8] NCI_DISCOVERY_TYPE_LISTEN_B_PRIME
-NFA_PROPRIETARY_CFG={05:FF:FF:06:8A:90:77:FF:FF}
+# Enabling/Disabling Forward functionality
+# Disable           0x00
+# Enable            0x01
+NXP_FWD_FUNCTIONALITY_ENABLE=0x01
 
 ###############################################################################
-# Choose the presence-check algorithm for type-4 tag.  If not defined,
-# the default value is 1.
-# 0  NFA_RW_PRES_CHK_DEFAULT; Let stack selects an algorithm
-# 1  NFA_RW_PRES_CHK_I_BLOCK; ISO-DEP protocol's empty I-block
-# 2  NFA_RW_PRES_CHK_RESET; Deactivate to Sleep, then re-activate
-# 3  NFA_RW_PRES_CHK_RB_CH0; Type-4 tag protocol's ReadBinary command on channel 0
-# 4  NFA_RW_PRES_CHK_RB_CH3; Type-4 tag protocol's ReadBinary command on channel 3
-# 5  NFA_RW_PRES_CHK_ISO_DEP_NAK; presence check command ISO-DEP NAK as per NCI2.0
-PRESENCE_CHECK_ALGORITHM=5
+# AID for Empty Select command
+# If specified, this AID will be substituted when an Empty SELECT command is
+# detected.  The first byte is the length of the AID.  Maximum length is 16.
+AID_FOR_EMPTY_SELECT={08:A0:00:00:01:51:00:00:00}
 
 ###############################################################################
-# Name of the NCI HAL module to use
-# If unset, falls back to nfc_nci.bcm2079x
-NCI_HAL_MODULE="nfc_nci.st21nfc"
+# When screen is turned off, specify the desired power state of the controller.
+# 0: power-off-sleep state; DEFAULT
+# 1: full-power state
+# 2: screen-off card-emulation (CE4/CE3/CE1 modes are used)
+SCREEN_OFF_POWER_STATE=2
 
 ###############################################################################
-# Allow list to be set at startup.
-DEVICE_HOST_ALLOW_LIST={02:C0}
+# Default poll duration (in ms)
+#  The defualt is 500ms if not set (see nfc_target.h)
+#NFA_DM_DISC_DURATION_POLL=333
 
 ###############################################################################
-# BAIL OUT value for P2P
-# Implements algorithm for NFC-DEP protocol priority over ISO-DEP protocol.
-POLL_BAIL_OUT_MODE=1
+# Force tag polling for the following technology(s).
+# The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
+# Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_B |
+#            NFA_TECHNOLOGY_MASK_F | NFA_TECHNOLOGY_MASK_ISO15693 |
+#            NFA_TECHNOLOGY_MASK_B_PRIME | NFA_TECHNOLOGY_MASK_KOVIO |
+#NFA_TECHNOLOGY_MASK_ACTIVE
+#
+# Notable bits:
+# NFA_TECHNOLOGY_MASK_A             0x01    /* NFC Technology A             */
+# NFA_TECHNOLOGY_MASK_B             0x02    /* NFC Technology B             */
+# NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
+# NFA_TECHNOLOGY_MASK_ISO15693      0x08    /* Proprietary Technology       */
+# NFA_TECHNOLOGY_MASK_KOVIO         0x20    /* Proprietary Technology       */
+# NFA_TECHNOLOGY_MASK_ACTIVE        0x40    /* NFC Technology Active        */
+POLLING_TECH_MASK=0x4F
 
 ###############################################################################
-# Extended APDU length for ISO_DEP
-ISO_DEP_MAX_TRANSCEIVE=0xFEFF
+# Force P2P to only listen for the following technology(s).
+# The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
+# Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_F |
+#NFA_TECHNOLOGY_MASK_ACTIVE
+#
+# Notable bits:
+# NFA_TECHNOLOGY_MASK_A             0x01    /* NFC Technology A             */
+# NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
+#NFA_TECHNOLOGY_MASK_ACTIVE         0x40    /* NFC Technology Active        */
+P2P_LISTEN_TECH_MASK=0x45
+
+PRESERVE_STORAGE=0x01
 
 ###############################################################################
-# Configure the NFC Extras to open and use a static pipe.  If the value is
-# not set or set to 0, then the default is use a dynamic pipe based on a
-# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
-# for each EE (ESE/SIM)
-OFF_HOST_ESE_PIPE_ID=0x5E
-OFF_HOST_SIM_PIPE_ID=0x3E
+# Deactivate notification wait time out in seconds used in ETSI Reader mode
+# 0 - Infinite wait
+NFA_DM_DISC_NTF_TIMEOUT=100
 
 ###############################################################################
-#Set the default Felica T3T System Code OffHost route Location :
+# AID_MATCHING constants
+# AID_MATCHING_EXACT_ONLY 0x00
+# AID_MATCHING_EXACT_OR_PREFIX 0x01
+# AID_MATCHING_PREFIX_ONLY 0x02
+# AID_MATCHING_EXACT_OR_SUBSET_OR_PREFIX 0x03
+AID_MATCHING_MODE=0x03
+
+###############################################################################
+#Set the default Felica T3T System Code :
 #This settings will be used when application does not set this parameter
-# host  0x00
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-DEFAULT_SYS_CODE_ROUTE=0x81
+DEFAULT_SYS_CODE={FE:FE}
 
 ###############################################################################
-#Set the Felica T3T System Code supported power state:
-DEFAULT_SYS_CODE_PWR_STATE=0x3B
+# Mifare Tag implementation
+# 0: General implementation
+# 1: Legacy implementation
+LEGACY_MIFARE_READER=1
 
 ###############################################################################
-# Path and Files used for FW update binaries storage
-STNFC_FW_PATH_STORAGE="/vendor/firmware/"
-#STNFC_FW_BIN_NAME="st21nfc_fw.bin"
-STNFC_FW_CONF_NAME="/vendor/etc/st21nfc_conf.txt"
-
-###############################################################################
-# Default off-host route for Felica.
-#This settings will be used when application does not set this parameter
-# host  0x00
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-DEFAULT_NFCF_ROUTE=0x81
-
-###############################################################################
-# Configure the default off-host route.
-# used for technology A and B routing
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-DEFAULT_OFFHOST_ROUTE=0x81
-
-###############################################################################
-# Configure the default AID route.
-# host  0x00
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-DEFAULT_ROUTE=0x81
-
-###############################################################################
-# Configure the NFCEEIDs of offhost UICC.
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-OFFHOST_ROUTE_UICC={81,83,85}
-
-###############################################################################
-# Configure the NFCEEIDs of offhost eSEs.
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-OFFHOST_ROUTE_ESE={82,86}
-
-###############################################################################
-# Configure the list of NFCEE for the ISO-DEP routing.
-# host  0x00
-# eSE   0x82 (eSE),    0x86 (eUICC/SPI-SE)
-# UICC  0x81 (UICC_1), 0x85 (UICC_2)
-DEFAULT_ISODEP_ROUTE=0x81
-
-###############################################################################
-# Configure the HAL Clock control
-# enable  0x01
-# disable 0x00 default value
-STNFC_CONTROL_CLK=0x01
-
-###############################################################################
-# Configure the ACTIVE_RW timer
-# Default 0x00, set 0x01 to enable it
-STNFC_ACTIVERW_TIMER=0x01
-
-###############################################################################
-# Core configuration settings
-CORE_CONF_PROP={ 20, 02, 13, 06,
-        a1, 01, 19,
-        a2, 01, 15,
-        80, 01, 01,
-        08, 01, 01,
-        11, 01, 01,
-        19, 01, 01
-}
+# Nfc recovery implementation
+# 0: Crash Nfc Service
+# 1: Toggle Nfc state
+RECOVERY_OPTION=1
